# pants-example

./: .gitignore  BUILD  pants.toml  pyproject.toml  requirements.txt
.github/workflows/: pants.yaml
src/psycop/: BUILD
src/psycop.minimal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/psycop/minimal/: minimal.py
src/psycop/minimal/tests/: BUILD  conftest.py  test_minimal.py  test_string_file.txt
src/psycop/training/application_modules/: get_search_space.py  process_manager_setup.py  trainer_spawner.py  wandb_handler.py
src/psycop/training/application_modules/train_model/: main.py
src/psycop/training/config_schemas/: BUILD  conf_utils.py  data.py  debug.py  full_config.py  model.py  preprocessing.py  project.py  train.py
src/psycop/training/data_loader/: col_name_checker.py  data_classes.py  data_loader.py  utils.py
src/psycop/training/preprocessing/post_split/: create_pipeline.py  pipeline.py
src/psycop/training/preprocessing/pre_split/: full_processor.py
src/psycop/training/tests/: BUILD  conftest.py  logistic-regression_30.parquet  naive-bayes_30.parquet  test_configs.py  test_load.py  test_utils.py  xgboost_30.parquet
src/psycop/training/tests/application_modules/: BUILD  test_train_model.py  test_wandb_handler.py
src/psycop/training/tests/test_data/: BUILD  (+1 more)
src/psycop/training/training/: train_and_predict.py  utils.py
src/psycop/training/training_output/: dataclasses.py  model_evaluator.py
src/psycop/training/utils/: col_name_inference.py  utils.py
src/tests/test_eval_results/: cfg.json  cfg.pkl  pipe.pkl  pipe_metadata.pkl
(+13 files in other folders)
